Fix body css in dark mode

--- a/src/js/components/popup/popup.scss
+++ b/src/js/components/popup/popup.scss
@@ -2,6 +2,10 @@ body {
   margin: 0;
 }
 
+body[data-theme="dark"] {
+  background: #181943;
+}
+
 ul {
   padding-left: 0;
   margin: 0;
@@ -10,11 +14,6 @@ ul {
 .popup {
   min-height: 500px;
   width: 700px;
-  padding: 20px;
+  padding: 10px;
   display: grid;
-}
-
-[data-theme="dark"] .popup {
-  background-color: var(--mui-background-default, #181943);
-  /* fallback for dark mode */
 }
